fix(ui): reduce size of start new/resume buttons on mobile

--- a/src/static/mobile.css
+++ b/src/static/mobile.css
@@ -58,3 +58,9 @@
 
 html, body {
 }
+
+/* Adjust connection action buttons size on mobile */
+.is-mobile .connection-actions button {
+    flex: 0 1 37.5%;
+    max-width: 37.5%;
+}
